@@ -1,3 +1,7 @@
+09-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* CLI script supports indexing database tables
+
 08-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fix: multiple copies of the same URL for indexing
